# rapid_naive_sql

./: CHANGELOG  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
src/: lib.rs  main.rs
src/data/: mod.rs
src/data/databases/: database.rs  mod.rs
src/data/databases/tables/: mod.rs  table.rs
src/data/databases/tables/rows/: mod.rs  row.rs
src/database/: database.rs  mod.rs  row.rs  table.rs
src/databases/: database.rs  mod.rs
src/databases/tables/: table.rs
src/databases/tables/rows/: mod.rs  row.rs
src/functionality/: database.rs  mod.rs
src/main_module/: mod.rs
src/main_module/controller/: CreateTableHandler.rs  create_table_handler.rs  mod.rs
src/main_module/data/: DataHandler.rs  DataObject.rs  Table.rs  data_handler.rs  data_object.rs  mod.rs  table.rs
src/main_module/model/: mod.rs
src/main_module/model/data/: data_handler.rs  data_object.rs  mod.rs  table.rs  table_row.rs
src/main_module/model/queries/: mod.rs  query.rs  query_element.rs  query_entity.rs  query_keyword.rs
src/main_module/model/queries/commands/: create_table_command.rs  insert_into_command.rs  mod.rs  querry_command.rs
src/queries/: mod.rs  parser.rs
